--- a/surgogram-web-app-server/package.json
+++ b/surgogram-web-app-server/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "@supabase/supabase-js": "^2.47.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "firebase": "^11.0.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5"
